plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '7.0.3'
}

group = 'com.odos'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

spotless {
	java {
		// import 순서 정의
		importOrder(
				"java",
				"javax",
				"lombok",
				"org.springframework",
				"",
				"\\#",
				"org.junit",
				"\\#org.junit",
				"com.guide",
				"\\#com.guide"
		)
		// 사용하지 않는 import 제거
		removeUnusedImports()
		// 구글 자바 포맷 적용
		googleJavaFormat()

		// 공백 제거
		trimTrailingWhitespace()
		// 끝부분 New Line 처리
		endWithNewline()
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	compileOnly 'org.projectlombok:lombok'
	// runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'
	implementation 'software.amazon.awssdk:s3:2.25.30'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.flywaydb:flyway-core'
	// encoding 문제 send() 개선 위한 거
	implementation 'nl.martijndwars:web-push:5.1.1'
//	implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
//	implementation 'org.bouncycastle:bcpkix-jdk18on:1.78.1'
	implementation 'nl.martijndwars:web-push:5.1.1'
	implementation 'org.bouncycastle:bcprov-jdk18on:1.84'

	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.12.0'
	implementation 'nl.martijndwars:web-push:5.1.1'
	implementation 'org.openapitools:jackson-databind-nullable:0.2.6'

	// monitoring
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'io.projectreactor:reactor-core'

	// supabase
	runtimeOnly 'org.postgresql:postgresql'
}

tasks.named('test') {
	useJUnitPlatform()
}

def isWindows = System.getProperty("os.name").toLowerCase().contains("windows")

tasks.register("installGitHooks", Copy) {
	from("scripts/pre-commit")
	into(".git/hooks")

	// 유닉스/맥에서는 실행 권한 0755 부여
	// (Windows에서는 파일모드가 무시되지만 실패하지 않습니다)
	fileMode = 0755
}

// chmod를 쓰던 태스크 제거하고, 위 태스크만 의존하도록 변경
compileJava.dependsOn("installGitHooks")
